Navigable CBOR: cursor API over byte[] and mmap'ed files
Adds `boring.nav`, a read-only cursor over encoded CBOR that decodes only
what you ask for, and `boring.mmap` for memory-mapped sources. On 68 KB of
records, `get-in` to one leaf is 21x faster than decode-then-get-in; `count`
is O(1) from the head; locating a 1 MiB blob instead of materialising it is
~650x.

The reader now reads through a `ByteSource` so one head parser serves heap
arrays and mappings alike. Two parsers was the alternative, and its failure
mode is silent: a skip that lands one byte off returns a plausible wrong
value rather than throwing.

ONE PARSER, TWO ACCESSORS. Routing every load through a MemorySegment was
built and measured first, and cost 14-50% on decode plus ~2.5x the stack per
recursive level -- which pushed the real depth limit below maxDepth's 1024
default and silently stopped the cap from being a cap. clj-async-profiler
attributed it: ~25% of samples in checkValidStateRaw / checkIndex /
checkSegment / checkBounds, per-access safety checks the JIT hoists out of a
tight loop but not out of a recursive decoder. Branching the accessor on the
backing recovers all of it. The microbenchmark that predicted parity
(bench/java/FfmProbe.java) measures exactly the loop shape that hoists --
a microbenchmark of an access pattern is not a benchmark of a decoder.

Because the byte[] path then touches no FFM, the FFM types moved out of
Reader entirely behind a JDK-9-named interface. `src/java` compiles at
--release 9, `src/java22` holds the one MemorySegment implementation, and a
single jar carries both since the JVM rejects a class only when it loads it.
JDK 21 LTS still runs the codec -- the full suite passes on it -- and 22+
additionally gets mmap. Moving FFM out of the recursive methods also restored
the stack limit, so maxDepth stays 1024.

Guard rails are enforced, not documented-and-hoped: navigation refuses a
:stringref document (a cursor holding only an offset cannot resolve an index
int